samples/_failures_safe/1761621059_c07020_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_57a4ffc6.c: In function ‘main’:
./samples/SAFE/__tmp_57a4ffc6.c:160:9: error: expected expression at end of input
  160 |         {EVENT_START, "",
      |         ^
./samples/SAFE/__tmp_57a4ffc6.c:160:9: error: expected declaration or statement at end of input
